# prism

./: README.md  changelog_v0.1.0.txt  prism.code-workspace  pyproject.toml  tasks.py
docs/: layout.md
prism/: collector.py  pipeline.py  reporting.py
prism/collector/: collector_newsapi.py  collector_perplexity.py
prism/utils/: error_handling.py  logging.py
reports/: Apple_perplexity_report.txt  Provide as much information as possible about Cotswold Industries_perplexity_report.txt
tests/: test_analysis.py  test_collector.py  test_company.py  test_pipeline.py  test_reporting.py  test_reporting_perplexity.py
tests/collector/: test_perplexity_integration.py  test_yfinance.py
tests/reports/: test_reporting.py  test_reporting_perplexity.py
